tdf#95836 disable complex script shaping if not necessary

Uniscribe layout engine didn't handle GSUBstitution very well,
having most of CJK punctuation positioned incorrectly when
using vertical text flow.

Disabling complex sciprt shaping allow it falling back to
adopting GSUB correctly.  The side effect is that mpOutGlyphs
aren't converted to glyph index, so that cares need to be taken.

Change-Id: I27a52371bd303112181f5e5366abc0398b4b8d8f