vcl/win/gdi/winlayout.hxx
@@ -107,10 +107,12 @@ private:
     SCRIPT_ITEM*    mpScriptItems;      // in logical order
     VisualItem*     mpVisualItems;      // in visual order
     int             mnItemCount;        // number of visual items
+    // used for determining if a script requires glyph Shaping
+    const           SCRIPT_PROPERTIES **mppScriptProperties;
+    int             mnMaxScript;
 
     // string specific info
     // everything is in logical order
-    OUString        msTheString;        // Sadly we need it in GetNextGlyphs(), to be able to call GetVerticalFlags()
     int             mnCharCapacity;
     WORD*           mpLogClusters;      // map from absolute_char_pos to relative_glyph_pos
     int*            mpCharWidths;       // map from absolute_char_pos to char_width
